Изменение экрана загрузки и иконки. Изменение иконок на один размер

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/home1"
+        android:icon="@drawable/nj"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/home1"
+        android:roundIcon="@drawable/nj"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsJournal"
         tools:targetApi="31">
