--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,23 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+# IDE
+.idea/
+*.ipr
+*.iws
+
+# Gradle
+.gradle/
+gradle-app.setting
+
+# Keystores
+*.jks
+*.keystore
+
+# Firebase/Google Services
+google-services.json
+app/google-services.json
+**/google-services.json
+# Logs
+*.log
